# xiva

./: AUTHORS  ChangeLog  Makefile.am  TODO  autogen.sh  configure.in  doxyfile  xiva-bf.spec  xiva.spec
config/: ax_boost_header.m4  ax_boost_lib.m4  ax_boost_multi_index.m4  ax_boost_prefix.m4  ax_boost_python.m4  ax_boost_regex.m4  ax_boost_required.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_boost_unit_test.m4
daemon/: Makefile.am  command_line.cpp  command_line.hpp  main.cpp  variable_map.cpp  variable_map.hpp  xiva.conf.example  xml.cpp  xml.hpp  xml_enumeration.hpp  xml_settings.cpp  xml_settings.hpp  xml_variable_map.cpp  xml_variable_map.hpp
debian/: changelog  control  libxiva-dev.files  libxiva.files  rules  xiva-daemon.files  xiva-stdin-reader.files  xiva-syslog.files  xiva-utils.files
examples/: crossdomain.xml
examples/xiva-daemon-fastcgi-perl/: xiva.pl
examples/xiva-daemon-fastcgi-perl/debian/: changelog  control  install  rules  xiva-daemon-fastcgi-perl.init  xiva-daemon-fastcgi-perl.logrotate
examples/xiva-daemon-python/: xiva-ulimits.conf.example  xiva.conf.example  xiva.init.conf.example  xiva_check.py  xiva_clt.py  xivadaemon.py  xivadaemonstart.sh
examples/xiva-daemon-python-configs/: xiva-ulimits.conf  xiva.conf  xiva.init.conf
examples/xiva-daemon-python-configs/debian/: changelog  control  rules  xiva-daemon-python-configs.install  xiva-daemon-python-configs.preinst
examples/xiva-daemon-python/debian/: changelog  control  xiva-daemon-check.install  xiva-daemon-python-dev.install  xiva-daemon-python.init  xiva-daemon-python.install  xiva-daemon-python.preinst
examples/xiva-daemon-tools-perl/: xiva_cmd.pl
examples/xiva-daemon-tools-perl/debian/: changelog  control  install  rules
examples/xiva-web-chat/: index-login.html  index.css  index.html  index.ie.css  index.js  transport.js
examples/xiva-web-chat-lighttpd-config/: 10-xiva-web-chat.conf
examples/xiva-web-chat-lighttpd-config/debian/: changelog  control  install  postinst  rules
examples/xiva-web-chat/blocks/b-chat/: b-chat.css
examples/xiva-web-chat/blocks/b-chat/_type/: b-chat_chat.css  b-chat_chat.ie.css  b-chat_login.css
examples/xiva-web-chat/blocks/b-login/: b-login.css  b-login.ie.css
examples/xiva-web-chat/blocks/b-message/: b-message.css  b-message.ie.css
examples/xiva-web-chat/blocks/b-message/_type/: b-message_you.css
examples/xiva-web-chat/blocks/b-messages/: b-messages.css
examples/xiva-web-chat/blocks/b-pseudo-link/: b-pseudo-link.css
examples/xiva-web-chat/blocks/b-rooms/: b-rooms.css
examples/xiva-web-chat/blocks/b-userlist/: b-userlist.css
examples/xiva-web-chat/blocks/b-writemessage/: b-writemessage.css  b-writemessage.ie.css
examples/xiva-web-chat/blocks/g-hidden/: g-hidden.css
examples/xiva-web-chat/blocks/g-reset/: g-reset.css
examples/xiva-web-chat/blocks/l-page/: innershiv.min.js  l-page.css
examples/xiva-web-chat/debian/: changelog  control  rules
include/: Makefile.am  xiva.hpp
include/details/: Makefile.am  acceptor.hpp  acceptor_base.hpp  asio.hpp  channels_stat_impl.hpp  char_traits.hpp  compound_listener.hpp  connection.hpp  connection_base.hpp  connection_data.hpp  connection_impl.hpp  connection_manager.hpp  connection_manager_base.hpp  connection_socket.hpp  connection_traits.hpp  connection_traits_base.hpp  connection_validator.hpp  dynamic_loader.hpp  formatters_data.hpp  formatters_data_channels.hpp  formatters_data_simple.hpp  formatters_factory.hpp  functors.hpp  guard.hpp  handler_invoker.hpp  handler_invoker_base.hpp  header_checker.hpp  http.hpp  http_constants.hpp  iterator_checker.hpp  line_reader.hpp  matcher_invoker.hpp  message_queue.hpp  range.hpp  request_checker.hpp  request_helper.hpp  request_impl.hpp  resource.hpp  response_impl.hpp  server_impl.hpp  (+17 more)
include/xiva/: Makefile.am  channel_id.hpp  channel_info.hpp  channels_stat.hpp  component_set.hpp  config.hpp  connection_listener.hpp  enumeration.hpp  error.hpp  formatter.hpp  formatter_creator.hpp  forward.hpp  globals.hpp  http_error.hpp  logger.hpp  message.hpp  message_filter.hpp  message_sender.hpp  ping_formatter.hpp  receiver_matcher.hpp  request.hpp  response.hpp  response_handler.hpp  server.hpp  settings.hpp  shared.hpp  threaded_reference_counted.hpp
python/: Makefile.am  cleanup_list.cpp  cleanup_list.hpp  gil.cpp  gil.hpp  interpreter_lock.cpp  interpreter_lock.hpp  module.cpp  python_enumeration.hpp  python_formatter.cpp  python_formatter.hpp  python_formatter_creator.cpp  python_formatter_creator.hpp  python_handler.cpp  python_handler.hpp  python_listener.cpp  python_listener.hpp  python_logger.cpp  python_logger.hpp  python_matcher.cpp  python_matcher.hpp  python_message_filter.cpp  python_message_filter.hpp  python_ping_formatter.cpp  python_ping_formatter.hpp  python_request.cpp  python_request.hpp  python_response.cpp  python_response.hpp  python_server.cpp  python_server.hpp  python_settings.cpp  python_settings.hpp  request_class.cpp  request_class.hpp  response_class.hpp  server.cpp  server.hpp  server_class.hpp
stdext/: Makefile.am  stdin_reader.cpp  syslog_logger.cpp
tests/: Makefile.am  checker_test.cpp  date_test.cpp  line_reader_test.cpp  listener_test.cpp  main.cpp  manager_test.cpp  matcher_test.cpp  mock_connection.cpp  mock_connection.hpp  mock_listener.cpp  mock_listener.hpp  mock_logger.cpp  mock_logger.hpp  queue_test.cpp  range_test.cpp  request_test.cpp  settings_test.cpp  string_test.cpp  test.conf  test_utils.hpp  url_handler_test.cpp  urlencode_test.cpp
utils/: Makefile.am  main.cpp
