noinst_HEADERS = acceptor_base.hpp acceptor.hpp asio.hpp char_traits.hpp \
	compound_listener.hpp connection_base.hpp connection_data.hpp \
	connection.hpp connection_impl.hpp connection_manager_base.hpp \
	connection_manager.hpp connection_traits_base.hpp connection_traits.hpp \
	dynamic_loader.hpp functors.hpp http_constants.hpp http.hpp \
	iterator_checker.hpp line_reader.hpp matcher_invoker.hpp \
	message_queue.hpp range.hpp request_checker.hpp request_impl.hpp \
	resource.hpp response_impl.hpp server_impl.hpp stdio_logger.hpp \
	string_utils.hpp system_error.hpp threaded_connection.hpp \
	threaded_listener.hpp threaded_matcher_invoker.hpp \
	threaded_queue.hpp threaded_shared.hpp urlencode.hpp url_matcher.hpp \
	websocket_info.hpp
