pkginclude_HEADERS = component_set.hpp config.hpp connection_listener.hpp \
	enumeration.hpp	error.hpp forward.hpp globals.hpp http_error.hpp logger.hpp \
	message.hpp message_sender.hpp receiver_matcher.hpp reference_counted.hpp \
	request.hpp server.hpp settings.hpp threaded_reference_counted.hpp
