pkginclude_HEADERS = channel_id.hpp channel_info.hpp \
	component_set.hpp config.hpp connection_listener.hpp \
	enumeration.hpp error.hpp formatter.hpp formatter_creator.hpp \
	forward.hpp globals.hpp http_error.hpp logger.hpp \
	message.hpp message_filter.hpp message_sender.hpp \
	ping_formatter.hpp request.hpp \
	response.hpp response_handler.hpp server.hpp settings.hpp shared.hpp
